// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stores a sequence of edits 1`] = `
{
  "maxDepth": 9007199254740991,
  "period": 3,
  "serial": 3,
  "snapshots": [],
  "stack": {
    "bombBay": [],
    "edits": [
      {
        "changes": [
          [
            1,
            "a",
          ],
        ],
        "timestamp": 0,
      },
      {
        "changes": [
          [
            0,
            1,
          ],
          [
            1,
            "b",
          ],
        ],
        "timestamp": 10,
      },
      {
        "changes": [
          [
            0,
            2,
          ],
          [
            1,
            "c",
          ],
        ],
        "timestamp": 20,
      },
    ],
    "next": null,
  },
  "state": "abc",
}
`;

exports[`stores a sequence of edits onto the next stack 1`] = `
{
  "maxDepth": 9007199254740991,
  "period": 3,
  "serial": 4,
  "snapshots": [],
  "stack": {
    "bombBay": [
      {
        "changes": [
          [
            1,
            "a",
          ],
        ],
        "timestamp": 0,
      },
    ],
    "edits": [
      {
        "changes": [
          [
            0,
            1,
          ],
          [
            1,
            "b",
          ],
        ],
        "timestamp": 10,
      },
      {
        "changes": [
          [
            0,
            2,
          ],
          [
            1,
            "c",
          ],
        ],
        "timestamp": 20,
      },
      {
        "changes": [
          [
            0,
            3,
          ],
          [
            1,
            "d",
          ],
        ],
        "timestamp": 30,
      },
    ],
    "next": null,
  },
  "state": "abcd",
}
`;
